add support for X-Remote-User header
